--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
@@ -45,24 +45,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCblePadre">Rubro*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro, settings =>
-               {
-                   settings.Name = "IdRubro";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-
-                   //Campo ID
-                   settings.Properties.ValueField = "IdRubro";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "ru_descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_rubro).GetHtml()
+                    @Html.Partial("_CmbRubro_Prestamos", Model.IdRubro)
                     @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
                 </div>
             </div>
