--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
@@ -29,11 +29,13 @@
 
     function OnFileUploadComplete(s, e)
     {
-        GridViewPartial_tipoAF_importacion.PerformCallback();
+        GridViewPartial_tipoAF_importacion.PerformCallback();  
         GridViewPartial_categoriaAF_importacion.PerformCallback();
         GridViewPartial_departamentoAF_importacion.PerformCallback();
         GridViewPartial_catalogoAF_importacion.PerformCallback();
+        GridViewPartial_ActivoFijo_importacion.PerformCallback();
     }
+
 </script>
 
 @using (Html.BeginForm("Importar", "ActivoFijo", FormMethod.Post,new { @role = "form", @id = "form"}))
@@ -53,7 +55,7 @@
                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                settings.NullText = "Selecciona el archivo...";
                settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
-               settings.ClientSideEvents.FileUploadComplete = "OnFileUploadComplete";              
+               settings.ClientSideEvents.FileUploadComplete = "OnFileUploadComplete";
            }).GetHtml()
             </div>
             <div class="col-md-2">
@@ -119,7 +121,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-
+                            @Html.Action("GridViewPartial_catalogoAF_importacion")
                         </div>
                     </div>
                 </div>
@@ -129,7 +131,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-
+                            @Html.Action("GridViewPartial_ActivoFijo_importacion")
                         </div>
                     </div>
                 </div>
