--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Anular.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_empleado_x_ro_rubro_Info
 
 @{
-    ViewBag.Title = "Modificar rubro fijo";
+    ViewBag.Title = "Anular rubro fijo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -57,7 +57,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdRubro">Rubro*</label>
-                    @Html.Partial("_CmbRubro_EmpxRub", Model.IdRubro)
+                    @Html.Partial("_CmbRubro_EmpxRub", Model)
                     @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
                 </div>
             </div>
