--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/_CmbActivo_fijo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/_CmbActivo_fijo.cshtml
@@ -3,28 +3,28 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdActivo";
+        settings.Name = "IdActivoFijo";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ImportacionReportes", Action = "CmbProveedor_Importacion", Area = "Reportes" };
+        settings.CallbackRouteValues = new { Controller = "ActivoFijoReportes", Action = "CmbActivo_fijo", Area = "Reportes" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-        settings.Properties.ValueField = "IdEntidad";
-        settings.Properties.ValueType = typeof(decimal);
-        settings.Properties.TextField = "pe_nombreCompleto";
+        settings.Properties.ValueField = "IdActivoFijo";
+        settings.Properties.ValueType = typeof(int);
+        settings.Properties.TextField = "Af_Nombre";
         settings.Properties.TextFormatString = "[{0}] {1} {2}";
         settings.Properties.FilterMinLength = 3;
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
         settings.Properties.AllowNull = true;
 
-        settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 70);
+        settings.Properties.Columns.Add("IdActivoFijo", "ID", 10);
+        settings.Properties.Columns.Add("CodActivoFijo", "Código", 20);
+        settings.Properties.Columns.Add("Af_Nombre", "Descripción", 70);
     })
-    .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_info_bajo_demanda)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_importacion_Info) ? "" : (Model == 0 ? "" : Model));
+    .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.ActivoFijoReportesController().get_list_bajo_demanda_af, new Core.Erp.Web.Areas.Reportes.Controllers.ActivoFijoReportesController().get_info_bajo_demanda_af)
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
