--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbRubro_EmpNov.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbRubro_EmpNov.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using System.Web.UI.WebControls;
 @{
-    var comboBox = Html.DevExpress().ComboBox(settings =>
+   var comboBox = Html.DevExpress().ComboBox(settings =>
     {
         settings.Name = "IdRubro";
         settings.Width = Unit.Percentage(100);
@@ -13,17 +13,17 @@
         settings.Properties.TextField = "ru_descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdRubro";
-        settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.ValueType = typeof(string);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
 
-        settings.Properties.Columns.Add("IdRubro", "ID", 10);
-        settings.Properties.Columns.Add("ru_descripcion", "Descripción", 20);
+        settings.Properties.Columns.Add("IdRubro", "ID", 20);
+        settings.Properties.Columns.Add("ru_descripcion", "Descripción", 80);
         settings.Properties.FilterMinLength = 3;
 
     })
     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoNovedadController().get_list_bajo_demanda_rubro, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoNovedadController().get_info_bajo_demanda_rubro)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_rubro_tipo_Info) ? "" : (Model == 0 ? "" : Model));
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_novedad_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
