--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Importar.cshtml
@@ -141,7 +141,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-
+                            @Html.Action("GridViewPartial_ActivoFijo_CtaCble_importacion")
                         </div>
                     </div>
                 </div>
