--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -257,7 +257,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_factura_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
+                //GridView_factura_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
                 if (data.IdProducto_padre > 0) {
                     MostrarModal();
                 }
@@ -927,7 +927,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                @Html.Action("GridViewPartial_factura_det")
+                @Html.Action("GridViewPartial_factura_det", new { DescuentoReadonly = Model.DescuentoReadOnly })
             </div>
         </div>
     </div>
