--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
@@ -3,7 +3,12 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_AprobacionPresupuesto";
-        settings.CallbackRouteValues = new { Controller = "AprobacionPresupuesto", Action = "GridViewPartial_AprobacionPresupuesto", IdSucursal = ViewBag.IdSucursal, IdPeriodo = ViewBag.IdPeriodo };
+        settings.CallbackRouteValues = new
+        {
+            Controller = "AprobacionPresupuesto",
+            Action = "GridViewPartial_AprobacionPresupuesto",
+            IdSucursal = ViewBag.IdSucursal,
+            IdPeriodo = ViewBag.IdPeriodo };
         settings.KeyFieldName = "IdPresupuesto";
         settings.Width = Unit.Percentage(100);
 
@@ -56,9 +61,9 @@
             if (Convert.ToBoolean(e.GetValue("Estado")) == false)
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
-            }
-
-            if (Convert.ToString(e.GetValue("IdUsuarioAprobacion")) != "")
+            }else
+                if (Math.Round(Convert.ToDouble(e.GetValue("MontoSolicitado")),2) == Math.Round(Convert.ToDouble(e.GetValue("MontoAprobado")), 2)
+                && !String.IsNullOrEmpty(Convert.ToString(e.GetValue("IdUsuarioAprobacion"))))
             {
                 e.Row.ForeColor = System.Drawing.Color.Blue;
             }
@@ -68,7 +73,7 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true && (Convert.ToString(DataBinder.Eval(tc.DataItem, "IdUsuarioAprobacion")) == "") )
+                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true &&  String.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "IdUsuarioAprobacion"))) )
                 {
                     ViewContext.Writer.Write(
                         Html.ActionLink("Aprobar", "Aprobar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPresupuesto = DataBinder.Eval(tc.DataItem, "IdPresupuesto") })
@@ -101,7 +106,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("PRE_001", "PresupuestoReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdPresupuesto = DataBinder.Eval(c.DataItem, "IdPresupuesto").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("PRE_001", "PresupuestoReportes" , new { Area="Reportes" , IdEmpresa=DataBinder.Eval(c.DataItem, "IdEmpresa" ).ToString(), IdPresupuesto=DataBinder.Eval(c.DataItem, "IdPresupuesto" ).ToString() }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
