--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
@@ -77,6 +77,18 @@
             });
         });
 
+        settings.CellEditorInitialize = (sender, e) =>
+        {
+            if (e.Column.FieldName == "IdUsuario")
+            {
+                MVCxGridView g = sender as MVCxGridView;
+                if(g.IsEditing == true)
+                    e.Editor.ReadOnly = true;
+                else
+                    e.Editor.ReadOnly = false;
+            }
+        };
+
         settings.ClientSideEvents.BeginCallback = "function(s,e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
     });
 }
