--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
@@ -368,6 +368,8 @@
                                {
                                    settings.Name = "pr_imagen";
                                    settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
+                                   settings.Properties.ImageSizeMode = ImageSizeMode.FitProportional;
+                                   settings.Properties.EnableServerResize = true;
                                }).Bind((Model.imagen_af).ToArray()).GetHtml()
                                 <div id="dropZone" style="display: none">
                                     <span class="dropZoneText">Drop an image here</span>
