--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -358,29 +358,15 @@
                                         el.hide();
                                 }
                             </script>
-                            <div id="externalDropZone" class="dropZoneExternal">
-                                <div id="dragZone">
-                                    <span class="dragZoneText">Seleccione una foto</span>
-                                </div>
-                                @*<img id="uploadedImage" src="~/Content/imagenes/activofijo/@ViewBag.nombre_imagen" alt="" style="display: none" onload="onImageLoad()" width="200" height="200" />*@
-                                @Html.DevExpress().BinaryImage(
-                               settings =>
-                               {
-                                   settings.Name = "pr_imagen";
-                                   settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
-                               }).Bind((Model.imagen_af).ToArray()).GetHtml()
-                                <div id="dropZone" style="display: none">
-                                    <span class="dropZoneText">Drop an image here</span>
-                                </div>
-                            </div>
                             <div class="uploadContainer">
-                                @Html.DevExpress().UploadControl(settings => {
+                                @Html.DevExpress().UploadControl(settings =>
+                           {
                                settings.ShowProgressPanel = true;
                                settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "DragAndDropImageUpload" };
                                settings.Name = "ucDragAndDrop";
                                settings.UploadMode = UploadControlUploadMode.Auto;
                                settings.AutoStartUpload = true;
-                               settings.Width = Unit.Percentage(70);
+                               settings.Width = Unit.Percentage(100);
                                settings.DialogTriggerID = "externalDropZone";
                                settings.AdvancedModeSettings.EnableDragAndDrop = true;
                                settings.AdvancedModeSettings.EnableFileList = false;
@@ -400,6 +386,32 @@
 
                            }).GetHtml()
                             </div>
+                            @Html.DevExpress().BinaryImage(
+                               settings =>
+                               {
+                                   settings.Name = "pr_imagen";
+                                   settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
+                               }).Bind((Model.imagen_af).ToArray()).GetHtml()
+@*
+    <div id="externalDropZone" class="dropZoneExternal">
+
+        <div id="dragZone">
+            <span class="dragZoneText">Seleccione una foto</span>
+        </div>
+        @*<img id="uploadedImage" src="~/Content/imagenes/activofijo/@ViewBag.nombre_imagen" alt="" style="display: none" onload="onImageLoad()" width="200" height="200" />
+        @Html.DevExpress().BinaryImage(
+       settings =>
+       {
+           settings.Name = "pr_imagen";
+           settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
+       }).Bind((Model.imagen_af).ToArray()).GetHtml()
+        <div id="dropZone" style="display: none">
+            <span class="dropZoneText">Drop an image here</span>
+        </div>
+
+                            </div>
+*@
+                            
 
                         </div>
 
